proxy and mariadb version changes